--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@
   </script>
 
 <div class="cities">
-  <p style="text-align: right;">© 2022 Todos los derechos reservados Pastelería Delicias </p>
+  <p style="text-align: right;">© 2022 Todos los derechos reservados Pastelería Mana</p>
 </div> 
 </body>
 </html>
