--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div id="main-container">
             <!--INICIA MENÚ -->
             <header>
-                <a href="../project0/index.html" class="logo nav-link">Pastelería</a>
+                <a href="index.html" class="logo nav-link">Pastelería</a>
                     <nav class="nav">
                         <li class="home nav-home"><a href="index.html" class="fa fa-home" ></a></li>
                         <ul class="nav-menu down">  
