--- a/site1.html
+++ b/site1.html
@@ -51,42 +51,42 @@
                                     </tr>
                             
                                     <tr>
-                                        <td class="site1"><img class="img-pastel" src="/imags/vainilla.png"></td>
+                                        <td class="site1"><img class="img-pastel" src="./imags/vainilla.png"></td>
                                         <td class="site1">Vainilla...................................$500</td>
                                     </tr>
 
                                     <tr>
                                         <td class="site1">Chocolate..............................$600</td>
-                                        <td class="site1"><img class="img-pastel" src="/imags/chocolate.png"></td>
+                                        <td class="site1"><img class="img-pastel" src="./imags/chocolate.png"></td>
                                     </tr>
 
                                     <tr>
-                                        <td class="site1"><img class="img-pastel" src="/imags/3 leches.png"></td>
+                                        <td class="site1"><img class="img-pastel" src="./imags/3 leches.png"></td>
                                         <td class="site1">3 Leches................................$400</td>
                                     </tr>
 
                                     <tr>
                                         <td class="site1">Fresas....................................$450</td>
-                                        <td class="site1"><img class="img-pastel" src="/imags/fresa.png"></td>
+                                        <td class="site1"><img class="img-pastel" src="./imags/fresa.png"></td>
                                     </tr>
                                     <tr>
-                                        <td class="site1"><img class="img-pastel" src="../project0/imags/frutas.png"></td>
+                                        <td class="site1"><img class="img-pastel" src="./imags/frutas.png"></td>
                                         <td class="site1">Frutas.....................................$650</td>
                                     </tr>
                                     <tr>
                                         <td class="site1">Trufa y Moka..........................$800</td>
-                                        <td class="site1"><img class="img-pastel" src="../project0/imags/trufa.png"></td>
+                                        <td class="site1"><img class="img-pastel" src="./imags/trufa.png"></td>
                                     </tr>
                                     <tr>
-                                        <td class="site1"><img class="img-pastel" src="../project0/imags/cheesecake.jpg"></td>
+                                        <td class="site1"><img class="img-pastel" src="./imags/cheesecake.jpg"></td>
                                         <td class="site1">Cheesecake...........................$700</td>
                                     </tr>
                                     <tr>
                                         <td class="site1">Manzana o Zanahoria............$400</td>
-                                        <td class="site1"><img class="img-pastel" src="../project0/imags/manzana.png"></td>
+                                        <td class="site1"><img class="img-pastel" src="./imags/manzana.png"></td>
                                     </tr>
                                     <tr>
-                                        <td class="site1"><img class="img-pastel" src="../project0/imags/limon.png"></td>
+                                        <td class="site1"><img class="img-pastel" src="./imags/limon.png"></td>
                                         <td class="site1">Limón.....................................$200</td>
                                     </tr>
                                 </tbody>
